docs/versioned_docs/version-0.3.x/benchmarks/model-size.md
---
title: Model Size
sidebar_position: 1
---

## Classification

| Model             | XNNPACK [MB] | Core ML [MB] |
| ----------------- | :----------: | :----------: |
| EFFICIENTNET_V2_S |     85.6     |     43.9     |

## Object Detection

| Model                          | XNNPACK [MB] |
| ------------------------------ | :----------: |
| SSDLITE_320_MOBILENET_V3_LARGE |     13.9     |

## Style Transfer

| Model                        | XNNPACK [MB] | Core ML [MB] |
| ---------------------------- | :----------: | :----------: |
| STYLE_TRANSFER_CANDY         |     6.78     |     5.22     |
| STYLE_TRANSFER_MOSAIC        |     6.78     |     5.22     |
| STYLE_TRANSFER_UDNIE         |     6.78     |     5.22     |
| STYLE_TRANSFER_RAIN_PRINCESS |     6.78     |     5.22     |

## OCR

| Model       | XNNPACK [MB] |
| ----------- | :----------: |
| CRAFT_800   |     83.1     |
| CRNN_EN_512 |     547      |
| CRNN_EN_256 |     277      |
| CRNN_EN_128 |     142      |

## Vertical OCR

| Model       | XNNPACK [MB] |
| ----------- | :----------: |
| CRAFT_1280  |     83.1     |
| CRAFT_320   |     83.1     |
| CRNN_EN_512 |     277      |
| CRNN_EN_64  |     74.3     |

## LLMs

| Model                 | XNNPACK [GB] |
| --------------------- | :----------: |
| LLAMA3_2_1B           |     2.47     |
| LLAMA3_2_1B_SPINQUANT |     1.14     |
| LLAMA3_2_1B_QLORA     |     1.18     |
| LLAMA3_2_3B           |     6.43     |
| LLAMA3_2_3B_SPINQUANT |     2.55     |
| LLAMA3_2_3B_QLORA     |     2.65     |

## Speech to text

| Model          | XNNPACK [MB] |
| -------------- | :----------: |
| WHISPER_TINY   |    231.0     |
| MOONSHINE_TINY |    148.9     |
